--- a/hunt/Gemfile
+++ b/hunt/Gemfile
@@ -19,6 +19,8 @@ gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.7'
 # Simplified form DSL
 gem 'simple_form', '~> 5.0.2'
+# Spreadsheet parser
+gem 'roo', '~> 2.8'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
