--- a/hunt/Gemfile
+++ b/hunt/Gemfile
@@ -21,6 +21,7 @@ gem 'jbuilder', '~> 2.7'
 gem 'simple_form', '~> 5.0.2'
 # Spreadsheet parser
 gem 'roo', '~> 2.8'
+gem 'acts-as-taggable-on', '~> 6.5'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
